# bytetaper

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml
.github/workflows/: ci.yml  msvc.yml  performance-smoke.yml
benchmarks/: README.md  json_filter_benchmark.cpp  performance-thresholds.yaml  run_benchmark.sh
benchmarks/fixtures/: huge-json.json  large-json.json  medium-json.json  orders-list.json  products-by-id.json  small-json.json
benchmarks/lib/: container_stats.sh  latency_parser.sh  latency_reporter.lua  payload_savings_parser.sh  throughput_parser.sh
benchmarks/report/: check_thresholds.sh  generate_json_report.sh  generate_markdown_report.sh  validate.sh
benchmarks/scenarios/: bytetaper_field_filtering.sh  bytetaper_observe.sh  cache_hit.sh  coalescing_burst.sh  compression_coordination.sh  envoy_only.sh  pagination_guardrail.sh  performance_smoke.sh
cmake/: FindRocksDB.cmake
docker/: benchmark.Dockerfile  dev.Dockerfile  envoy.Dockerfile
docs/: cache-policy.md  coalescing-policy.md  compression-policy.md  field-selection.md  observability.md  pagination-policy.md  policy-safety.md  route-policy.md
docs/examples/: compression-coordination.md
docs/performance/: json-filtering.md
docs/production/: performance-benchmark-guide.md
docs/runtime/: runtime-boundaries.md
examples/envoy/: envoy-baseline.yaml  envoy-bytetaper-cache-a.yaml  envoy-bytetaper-cache-b.yaml  envoy-bytetaper-coalescing.yaml  envoy-bytetaper-field-filtering.yaml  envoy-bytetaper-observe.yaml  envoy-bytetaper-pagination.yaml  envoy-compression.yaml  envoy.yaml
examples/mock-api/: server.py
examples/policy/: bytetaper-policy.yaml  cache-benchmark-policy.yaml  coalescing-benchmark-policy.yaml  compression-benchmark-policy.yaml  field-filtering-policy.yaml  observe-mode-policy.yaml  pagination-benchmark-policy.yaml
include/apg/: context.h  pipeline.h  query_view.h  result.h  stage.h
include/api_intelligence/: coalescing_signal.h  compression_signal.h  pagination_signal.h
include/cache/: cache_entry.h  cache_entry_codec.h  cache_key.h  cache_safety.h  cache_ttl.h  l1_cache.h  l1_ring_cache.h  l2_disk_cache.h
include/coalescing/: coalescing_decision.h  coalescing_eligibility.h  coalescing_key.h  coalescing_safety.h  coalescing_timeout.h  inflight_registry.h  wait_window.h
include/compression/: accept_encoding.h  compression_decision.h  compression_eligibility.h  compression_size.h  content_encoding.h
include/extproc/: bytetaper_to_envoy.h  default_pipelines.h  grpc_server.h  header_view.h  proto_boundary.h  reporting_headers.h  request_runtime.h
include/field_selection/: request_target.h
include/json_transform/: content_type.h
include/metrics/: cache_metrics.h  coalescing_metrics.h  compression_metrics.h  metrics_http_server.h  pagination_metrics.h  prometheus_registry.h  runtime_metrics.h
include/pagination/: oversized_response_guard.h  pagination_decision.h  pagination_mutation.h  pagination_query.h
include/policy/: cache_policy.h  cache_policy_validator.h  coalescing_policy.h  coalescing_policy_validator.h  compression_policy.h  field_filter_policy.h  method_matcher.h  pagination_policy.h  policy_reporter.h  route_matcher.h  route_policy.h  yaml_loader.h
include/runtime/: pending_lookup_registry.h  worker_queue.h
include/safety/: fail_open.h
include/stages/: cache_key_prepare_stage.h  coalescing_decision_stage.h  coalescing_follower_wait_stage.h  coalescing_leader_completion_stage.h  compression_decision_stage.h  l1_cache_lookup_stage.h  l1_cache_store_stage.h  l2_cache_async_lookup_enqueue_stage.h  l2_cache_async_store_enqueue_stage.h  l2_cache_lookup_stage.h  l2_cache_store_stage.h  pagination_request_mutation_stage.h
proto/: ENVOY_PROTO_SNAPSHOT.md
proto/validate/: validate.proto
reports/benchmarks/: benchmark_results_20260505_091007-naive-worker.txt  benchmark_results_20260506_060754-8_kRuntimeQueueSlotsPerShard.txt  benchmark_results_20260506_061523-32_kRuntimeQueueSlotsPerShard.txt  benchmark_results_20260506_062122-16_kRuntimeQueueSlotsPerShard.txt  benchmark_results_20260506_082546.txt  benchmark_results_20260506_083659_envoy_only.txt  benchmark_results_20260506_091444_bytetaper_observe.txt  benchmark_results_20260506_093629_bytetaper_field_filtering.txt  benchmark_results_20260506_102242.txt  benchmark_results_20260506_103715_cache_hit.txt  benchmark_results_20260506_110327_pagination_guardrail.txt  benchmark_results_20260506_112640_compression_coordination.txt  benchmark_results_20260506_113640_coalescing_burst.txt  benchmark_results_20260506_135549_bytetaper_observe.txt  benchmark_results_20260506_140327_bytetaper_observe.txt  benchmark_results_20260506_141119_bytetaper_observe.txt  (+10 more)
src/: main.cpp
tests/: accept_encoding_test.cpp  apg_pipeline_runner_test.cpp  apg_query_view_test.cpp  apg_result_output_test.cpp  apg_stage_signature_test.cpp  apg_transform_context_test.cpp  cache_auth_safety_test.cpp  cache_entry_test.cpp  cache_hot_path_regression_test.cpp  cache_hot_path_tail_regression_test.cpp  cache_key_auth_scope_test.cpp  cache_key_prepare_stage_test.cpp  cache_key_test.cpp  cache_metrics_test.cpp  cache_policy_validator_test.cpp  cache_ttl_test.cpp  coalescing_auth_safety_test.cpp  coalescing_cache_integration_test.cpp  coalescing_decision_test.cpp  coalescing_event_driven_wait_test.cpp  coalescing_fallback_tightened_test.cpp  coalescing_follower_wait_test.cpp  coalescing_get_only_test.cpp  coalescing_key_test.cpp  coalescing_leader_completion_test.cpp  coalescing_metrics_test.cpp  coalescing_policy_test.cpp  coalescing_policy_validator_test.cpp  coalescing_signal_test.cpp  coalescing_timeout_test.cpp  compiled_route_runtime_test.cpp  compression_decision_test.cpp  compression_metrics_test.cpp  compression_policy_test.cpp  compression_policy_validator_test.cpp  compression_signal_test.cpp  compression_size_test.cpp  content_encoding_test.cpp  content_type_eligibility_test.cpp  default_limit_mutation_test.cpp  (+58 more)
tools/: generate_benchmark_fixtures.py
(+116 files in other folders)
